// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders with defaults 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="fill-current inline"
    data-slot="icon"
    fill="currentColor"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      User
    </title>
    <path
      clip-rule="evenodd"
      d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon renders with non-default size 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="fill-current inline"
    data-slot="icon"
    fill="currentColor"
    height="16"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      User
    </title>
    <path
      clip-rule="evenodd"
      d="M7.5 6a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM3.751 20.105a8.25 8.25 0 0 1 16.498 0 .75.75 0 0 1-.437.695A18.683 18.683 0 0 1 12 22.5c-2.786 0-5.433-.608-7.812-1.7a.75.75 0 0 1-.437-.695Z"
      fill-rule="evenodd"
    />
  </svg>
</DocumentFragment>
`;
